Indentation is really important to behat it'd seem.

--- a/tests/behat/behat.yml
+++ b/tests/behat/behat.yml
@@ -3,7 +3,8 @@ default:
     default:
       contexts:
         - FeatureContext:
-          base_url: http://127.0.0.1:8888
+            parameters:
+              base_url: http://127.0.0.1:8888
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
