--- a/.travis.yml
+++ b/.travis.yml
@@ -82,9 +82,13 @@ before_script:
   # Enable comstack and default permissions module.
   - drush en -y comstack comstack_default_permissions comstack_pm restful
   - drush en -y restful_token_auth comstack_pm_rest_api
+  - drush en -y devel devel_generate
 
   # Setup files.
   - sudo chmod -R 777 sites/all
+
+  # Generate some test users.
+  - drush generate-users 50
 
   # Time for Behat stuffs.
   # Setup display for Selenium.
