--- a/.travis.yml
+++ b/.travis.yml
@@ -116,7 +116,8 @@ before_script:
 script:
   # Run the Behat tests, use tags to order things.
   - ./bin/behat --tags @core
-  - ./bin/behat --tags @post
+  - ./bin/behat --tags @runfirst
+  - ./bin/behat --tags @post ~@runfirst
   - ./bin/behat --tags @get
   - ./bin/behat --tags @put
   - ./bin/behat --tags @delete
