--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ before_script:
   - sudo chmod -R 777 sites/all
 
   # Generate our predictable test user "testy".
-  - drush ucrt testy
+  - drush ucrt testy --password="password"
   # Generate some test users.
   - drush generate-users 50
 
