--- a/.travis.yml
+++ b/.travis.yml
@@ -124,7 +124,7 @@ script:
   - ./bin/behat --tags @runfirst
   - ./bin/behat --tags '@post&&~@runfirst'
   - ./bin/behat --tags @get
-  - ./bin/behat --tags @put
+  - ./bin/behat --tags '@put&&~@runlast'
   - ./bin/behat --tags '@delete&&~@runlast'
   - ./bin/behat --tags @runlast
 
